[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["fogdingding <fogdingding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"
selenium = "^4.12.0"
selenium-wire = "^5.1.0"
webdriver-manager = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
